[gd_scene load_steps=4 format=3 uid="uid://c3wx4dw5u5doi"]

[ext_resource type="Texture2D" uid="uid://dbol7md7la36h" path="res://Assets/Sprites/sphere_128x.png" id="1_ecfs4"]
[ext_resource type="Script" path="res://src/Scripts/large_robot.gd" id="1_nec0b"]
[ext_resource type="PackedScene" uid="uid://c4xqleeujsqa7" path="res://Scenes/large_robot_leg.tscn" id="2_rf0sm"]

[node name="LargeRobot" type="Node2D"]
script = ExtResource("1_nec0b")

[node name="BodyGraphics" type="Sprite2D" parent="."]
texture = ExtResource("1_ecfs4")

[node name="LargeRobotLegUL" parent="." instance=ExtResource("2_rf0sm")]
position = Vector2(-48, -48)

[node name="LargeRobotLegUR" parent="." instance=ExtResource("2_rf0sm")]
position = Vector2(48, -48)
chirality = "Right"

[node name="LargeRobotLegDL" parent="." instance=ExtResource("2_rf0sm")]
position = Vector2(-48, 48)

[node name="LargeRobotLegDR" parent="." instance=ExtResource("2_rf0sm")]
position = Vector2(48, 48)
chirality = "Right"
